--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,23 @@
   @apply text-blue-600 underline visited:text-blue-700 hover:text-blue-500 focus:text-blue-500;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
+/* scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: 0.25rem;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+/* Track */
+::-webkit-scrollbar-track {
+  background: #c8c8c8;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
